# nanokvm-mcp

./: .gitignore  .python-version  API_REFERENCE.md  README.md  pyproject.toml
nanokvm_mcp/: __init__.py  auth.py  client.py  hid.py  server.py
tests/: __init__.py  conftest.py  test_auth.py  test_client.py  test_hid.py  test_server.py
